# dirtybot

./: .gitignore  README.md
Arduino/calibration_mpu9250/: calibration_mpu9250.ino
Arduino/dirtybot/: dirtybot.ino  eeprom_utils.h
ros2/: CHANGELOG.md  README.md
ros2/originbot_base/: CMakeLists.txt  package.xml
ros2/originbot_base/include/originbot_base/: originbot_base.h
ros2/originbot_base/launch/: robot.launch.py
ros2/originbot_base/src/: originbot_base.cpp
ros2/originbot_bringup/: CMakeLists.txt  package.xml
ros2/originbot_bringup/config/: joy.yaml
ros2/originbot_bringup/launch/: camera.launch.py  camera_internal.launch.py  joy_teleop.launch.py  originbot.launch.py  ydlidar.launch.py
ros2/originbot_bringup/param/: ydlidar.yaml
ros2/originbot_deeplearning/body_tracking/: CMakeLists.txt  README.md  package.xml
ros2/originbot_deeplearning/body_tracking/include/: body_tracking.h  common.h  param_node.h  robot_ctrl_node.h  smart_subscriber.h  time_helper.h  util.h
ros2/originbot_deeplearning/body_tracking/launch/: hobot_body_tracking.launch.py  hobot_body_tracking_without_gesture.launch.py
ros2/originbot_deeplearning/body_tracking/scripts/: gpio.py
ros2/originbot_deeplearning/body_tracking/src/: body_tracking.cpp  main.cpp  smart_subscriber.cpp  util.cpp
ros2/originbot_deeplearning/gesture_control/: .arclint  CMakeLists.txt  README.md  package.xml
ros2/originbot_deeplearning/gesture_control/include/: common.h  gesture_control_engine.h  gesture_control_node.h  param_node.h
ros2/originbot_deeplearning/gesture_control/launch/: hobot_gesture_control.launch.py
ros2/originbot_deeplearning/gesture_control/src/: gesture_control_engine.cpp  gesture_control_node.cpp  main.cpp  param_node.cpp
ros2/originbot_deeplearning/line_follower_perception/: CMakeLists.txt  package.xml
ros2/originbot_deeplearning/line_follower_perception/include/line_follower_perception/: line_follower_perception.h
ros2/originbot_deeplearning/line_follower_perception/src/: line_follower_perception.cpp
ros2/originbot_demo/: package.xml  setup.cfg  setup.py
ros2/originbot_demo/originbot_demo/: control_buzzer.py  control_led.py  control_servo.py  draw_circle.py  echo_odom.py  echo_status.py
ros2/originbot_driver/ydlidar_ros2_driver/launch/: .ydlidar_launch.py.swp  ydlidar_launch.py  ydlidar_launch_view.py
ros2/originbot_driver/ydlidar_ros2_driver/params/: ydlidar.yaml
ros2/originbot_driver/ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
ros2/originbot_linefollower/: package.xml  setup.cfg  setup.py
ros2/originbot_linefollower/originbot_linefollower/: follower.py
ros2/originbot_msgs/: CMakeLists.txt  package.xml
ros2/originbot_msgs/msg/: OriginbotStatus.msg
ros2/originbot_msgs/srv/: OriginbotBuzzer.srv  OriginbotPID.srv  OriginbotServo.srv
ros2/originbot_navigation/: CMakeLists.txt  package.xml
ros2/originbot_navigation/config/: lds_2d.lua
ros2/originbot_navigation/launch/: cartographer.launch.py  nav_bringup.launch.py
ros2/originbot_navigation/maps/: my_map.pgm  my_map.yaml
ros2/originbot_navigation/param/: originbot_nav2.yaml
voice/: xxx.json
